<resources>
    <string name="app_name">Retrofit</string>
    <string name="image">TODO</string>
    <string name="textview">TextView</string>
    <string name="create_new_user">Create New User!</string>
    <string name="submit">submit</string>
    <string name="detail">Detail</string>
    <string name="add_name">Name</string>
    <string name="add_job">Job</string>
    <string name="detail_user">Detail User</string>
    <string name="edit_new_user">Edit new user</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="edit_name">Name</string>
    <string name="edit_job">Job</string>
    <string name="name">Name</string>
    <string name="job">Job</string>
</resources>